--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,7 +101,33 @@ services:
     #   timeout: 10s
     #   retries: 5
 
-
+  webserver:
+    image: apache/airflow:latest
+    command: webserver
+    entrypoint: []
+    depends_on:
+      - postgres
+    environment:
+      - LOAD_EX=n
+      - EXECUTOR=Sequential
+      - AIRFLOW__DATABASE__SQL_ALCHEMY_CONN=postgresql+psycopg2://airflow:airflow@postgres:5432/airflow
+      - AIRFLOW__WEBSERVER__SECRET_KEY=secret
+    logging:
+      options:
+        max-size:10m
+        max-file:"3"
+    volumes:
+      - ./dags:/opt/airflow/dags
+      # -
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: ['CMD-SHELL', "[ -f /opt/airflow/airflow-webserver.pid]"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+    networks:
+      - confluent
 
 networks:
   confluent:
