--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 
 
 services:
+
+
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
     hostname: zookeeper
@@ -123,6 +125,11 @@ services:
       timeout: 10s
       retries: 5
 
+
+
+
+
+
   webserver:
     image: apache/airflow:latest-python3.10
     command: webserver
@@ -176,7 +183,7 @@ services:
       # control-center:
       #   condition: service_healthy
       webserver:
-        condition: service_healthy
+        condition: service_started
     volumes:
       - ./dags:/opt/airflow/dags
       - ./airflow_script/eltscript.sh:/opt/airflow/airflow_script/eltscript.sh
@@ -198,6 +205,11 @@ services:
     networks:
       - confluent
 
+
+
+
+
+
   postgres:
     image: postgres:15.6
     environment:
@@ -211,6 +223,59 @@ services:
       options:
         max-size: 10m
         max-file: "3"
+    networks:
+      - confluent
+
+
+
+
+
+  spark-master:
+    image: bitnami/spark:latest
+    command: bin/spark-class org.apache.spark.deploy.master.Master
+    ports:
+      - "9090:8080"
+      - "7077:7077"
+    networks:
+      - confluent
+
+  spark-worker:
+    image: bitnami/spark:latest
+    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    depends_on:
+      - spark-master
+    environment:
+      SPARK_MODE: worker
+      SPARK_WORKER_CORES: 2
+      SPARK_WORKER_MEMORY: 1g
+      SPARK_MASTER_URL: spark://spark-master:7077
+    networks:
+      - confluent
+
+  spark-worker-2:
+    image: bitnami/spark:latest
+    command: bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    depends_on:
+      - spark-master
+    environment:
+      SPARK_MODE: worker
+      SPARK_WORKER_CORES: 2
+      SPARK_WORKER_MEMORY: 1g
+      SPARK_MASTER_URL: spark://spark-master:7077
+    networks:
+      - confluent
+
+  cassandra_db:
+    image: cassandra:latest
+    container_name: cassandra
+    hostname: cassandra
+    ports:
+      - "9042:9042"
+    environment:
+      - MAX_HEAP_SIZE=512M
+      - HEAP_NEWSIZE=100M
+      - CASSANDRA_USERNAME=cassandra
+      - CASSANDRA_PASSWORD=cassandra
     networks:
       - confluent
 
